initial commit contrast fix

--- a/packages/devextreme-scss/scss/widgets/generic/scheduler/_colors.scss
+++ b/packages/devextreme-scss/scss/widgets/generic/scheduler/_colors.scss
@@ -89,11 +89,32 @@ $scheduler-time-panel-background-color: null !default;
 $scheduler-tooltip-appointment-text-color: null !default;
 $scheduler-appointment-overlay-bg: null !default;
 
+$month-text-color-light: #757575;
+$month-text-color-dark: #9c9c9c;
+
 // Agenda
 $agenda-appointment-recurrence-icon-color: null !default;
 $agenda-appointment-hover-bg: $base-hover-bg !default;
 $agenda-appointment-active-bg: null !default;
 $agenda-appointment-text-color: null !default;
+
+$colors-light:
+"light",
+"carmine",
+"softblue";
+
+$colors-dark:
+"dark",
+"darkmoon",
+"darkviolet";
+
+@if index($colors-light, $color) {
+  $scheduler-workspace-month-text-color: $month-text-color-light;
+}
+
+@if index($colors-dark, $color) {
+  $scheduler-workspace-month-text-color: $month-text-color-dark;
+}
 
 @if $color == "carmine" {
   $scheduler-base-border-color: color.change($base-border-color, $alpha: 0.6) !default;
@@ -149,7 +170,6 @@ $agenda-appointment-text-color: null !default;
   $scheduler-appointment-start-color: $base-inverted-bg !default;
   $scheduler-workspace-focused-cell-color: lighten($base-accent, 5%) !default;
   $scheduler-panel-text-color: $base-text-color !default;
-  $scheduler-workspace-month-text-color: $base-text-color !default;
   $scheduler-dropdown-appointment-date-color: $base-text-color !default;
   $scheduler-workspace-active-cell-color: $scheduler-accent-border-color !default;
   $scheduler-workspace-hovered-cell-color: extcolor.difference(#fff, $base-text-color) !default;
@@ -189,7 +209,6 @@ $agenda-appointment-text-color: null !default;
   $scheduler-panel-text-color: $base-text-color !default;
   $scheduler-time-indicator-color: lighten($scheduler-current-time-cell-color, 15%) !default;
   $scheduler-dd-appointment-hover-text-color: $base-inverted-text-color !default;
-  $scheduler-workspace-month-text-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-dropdown-appointment-date-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-workspace-active-cell-color: $scheduler-accent-border-color !default;
   $scheduler-workspace-hovered-cell-color: $scheduler-workspace-month-text-color !default;
@@ -230,7 +249,6 @@ $agenda-appointment-text-color: null !default;
   $scheduler-panel-text-color: $base-text-color !default;
   $scheduler-time-indicator-color: lighten($scheduler-current-time-cell-color, 15%) !default;
   $scheduler-dd-appointment-hover-text-color: #fff !default;
-  $scheduler-workspace-month-text-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-dropdown-appointment-date-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-workspace-active-cell-color: $scheduler-accent-border-color !default;
   $scheduler-workspace-hovered-cell-color: $scheduler-workspace-month-text-color !default;
@@ -269,7 +287,6 @@ $agenda-appointment-text-color: null !default;
   $scheduler-panel-text-color: $base-header-color !default;
   $scheduler-time-indicator-color: lighten($scheduler-current-time-cell-color, 15%) !default;
   $scheduler-dd-appointment-hover-text-color: $base-text-color !default;
-  $scheduler-workspace-month-text-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-dropdown-appointment-date-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-workspace-active-cell-color: $scheduler-accent-border-color !default;
   $scheduler-workspace-hovered-cell-color: $scheduler-workspace-month-text-color !default;
@@ -349,7 +366,6 @@ $agenda-appointment-text-color: null !default;
   $scheduler-panel-text-color: $base-text-color !default;
   $scheduler-time-indicator-color: lighten($scheduler-current-time-cell-color, 15%) !default;
   $scheduler-dd-appointment-hover-text-color: $base-inverted-text-color !default;
-  $scheduler-workspace-month-text-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-dropdown-appointment-date-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-workspace-active-cell-color: $scheduler-accent-border-color !default;
   $scheduler-workspace-hovered-cell-color: $scheduler-workspace-month-text-color !default;
@@ -387,7 +403,6 @@ $agenda-appointment-text-color: null !default;
   $scheduler-panel-text-color: $base-text-color !default;
   $scheduler-time-indicator-color: lighten($scheduler-current-time-cell-color, 15%) !default;
   $scheduler-dd-appointment-hover-text-color: $base-inverted-text-color !default;
-  $scheduler-workspace-month-text-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-dropdown-appointment-date-color: lighten($base-text-color, 38.5%) !default;
   $scheduler-workspace-active-cell-color: $scheduler-accent-border-color !default;
   $scheduler-workspace-hovered-cell-color: $scheduler-workspace-month-text-color !default;
@@ -411,4 +426,3 @@ $agenda-appointment-text-color: null !default;
 }
 
 $scheduler-appointment-active-color: $scheduler-appointment-start-color;
-
